--- a/Halloapp/pt.lproj/Localizable.strings
+++ b/Halloapp/pt.lproj/Localizable.strings
@@ -391,6 +391,12 @@
 /* When user replies to a moment, it sends a quoted message to the author of the moment via chat. This label is displyed in the chat bubble to indicate a moment reply. */
 "chat.quoted.moment.label" = "Momento";
 
+/* When user replies privately to a post, it sends a quoted message to the author of the post via chat. This label is displyed in the chat bubble to indicate a post reply when the post has been deleted. */
+"chat.quoted.post.deleted.label" = "Postagem excluída";
+
+/* When user replies privately to a post, it sends a quoted message to the author of the post via chat. This label is displyed in the chat bubble to indicate a post reply when the post has expired. */
+"chat.quoted.post.expired.label" = "Postagem expirada";
+
 /* Label shown when user is typing */
 "chat.typing.capitalized" = "escrevendo...";
 
@@ -870,6 +876,15 @@
 
 /* Text shown to tell user the group title is tappable */
 "group.title.tap.for.info" = "Toque aqui para obter informações do grupo";
+
+/* Error message when a group fails to delete */
+"groupGrid.deletion.error" = "Falha ao excluir grupo";
+
+/* Title of button that deletes a group */
+"groupGrid.deletion.title" = "Excluir grupo";
+
+/* Tag for new posts in groups grid */
+"groupGrid.newPostIndicator" = "Novo";
 
 /* More info menu item */
 "groupGridHeader.moreInfo" = "Mais informações";
@@ -1426,6 +1441,21 @@
 /* Title for popup that appears when user tries to register invalid number */
 "registration.invalidphone" = "Que pena!";
 
+/* Popup that appears when user tries to register a number with invalid country code */
+"registration.invalidphone.invalidCountryCode" = "O número de telefone que você digitou tem um código de país inválido. Por favor, cheque novamente.";
+
+/* Popup that appears when user tries to register a number with invalid length */
+"registration.invalidphone.invalidLength" = "O número de telefone que você digitou tem um comprimento inválido. Por favor, cheque novamente.";
+
+/* Popup that appears when user tries to register a landline number */
+"registration.invalidphone.lineTypeFixed" = "O número de telefone que você digitou não é um número de celular. Por favor, cheque novamente.";
+
+/* Popup that appears when user tries to register a number with unknown line type */
+"registration.invalidphone.lineTypeOther" = "O número de telefone que você digitou não é um número de celular. Por favor, cheque novamente.";
+
+/* Popup that appears when user tries to register a VoIP number */
+"registration.invalidphone.lineTypeVoip" = "O número de telefone que você digitou não é um número de celular. Por favor, cheque novamente.";
+
 /* Popup that appears when user tries to register invalid number */
 "registration.invalidphone.only" = "O número de telefone inserido é inválido. Por favor, cheque novamente.";
 
@@ -1803,6 +1833,12 @@
 
 /* Text that indicates a view action. */
 "view.title" = "Visualizar";
+
+/* Moment deletion confirmation. Displays as action sheet title. */
+"your.moment.delete.confirmation" = "Excluir este momento? Essa ação não pode ser desfeita.";
+
+/* Title for the button that confirms intent to delete your own moment. */
+"your.moment.delete.title" = "Excluir momento";
 
 /* Title for the button that confirms intent to delete your own post. */
 "your.post.deletepost.button" = "Apagar publicaçāo";
