--- a/Halloapp/tr.lproj/Localizable.stringsdict
+++ b/Halloapp/tr.lproj/Localizable.stringsdict
@@ -199,7 +199,7 @@
 	<key>n.unread.comments.title</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
-		<string>%#@n_unread_comments@</string>
+		<string>%#@n_okunmamış_yorum@</string>
 		<key>n_unread_comments</key>
 		<dict>
 			<key>NSStringFormatSpecTypeKey</key>
@@ -215,7 +215,7 @@
 	<key>n.unread.messages.title</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
-		<string>%#@n_unread_messages@</string>
+		<string>%#@n_okunmamış_mesaj@</string>
 		<key>n_unread_messages</key>
 		<dict>
 			<key>NSStringFormatSpecTypeKey</key>
@@ -223,9 +223,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%d Unread Message</string>
+			<string>%d okunmamış mesaj</string>
 			<key>other</key>
-			<string>%d Unread Messages</string>
+			<string>%d okunmamış mesaj</string>
 		</dict>
 	</dict>
 	<key>notification.n.photos</key>
