--- a/Notification Service Extension/id.lproj/Localizable.strings
+++ b/Notification Service Extension/id.lproj/Localizable.strings
@@ -2,13 +2,13 @@
 "alert.no.internet.title" = "Tidak Ada Koneksi Internet";
 
 /* Message to tell the user to try again when they have internet connectivity again */
-"alert.no.internet.try.again" = "Periksa apakah Anda tersambung ke internet, lalu coba lagi.";
+"alert.no.internet.try.again" = "Periksa jika Anda terhubung ke internet, lalu coba lagi.";
 
 /* Company name */
 "app.name.halloapp" = "HalloApp";
 
 /* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
-"button.add" = "Tambah";
+"button.add" = "Tambahkan";
 
 /* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "Batalkan";
@@ -17,7 +17,7 @@
 "button.cancel.capitalized" = "BATALKAN";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
-"button.continue" = "Lanjut";
+"button.continue" = "Lanjutkan";
 
 /* Title for generic copy URL button */
 "button.copy.link" = "Salin Tautan";
@@ -32,13 +32,13 @@
 "button.done" = "Selesai";
 
 /* Title for button that will take user to iOS settings (e.g., to enable some permission we need). */
-"button.go.to.settings" = "Ke Pengaturan";
+"button.go.to.settings" = "Buka Pengaturan";
 
 /* Title for generic Invite button. */
 "button.invite" = "Undang";
 
 /* Title for generic Learn More button. Used to provide user with additional context to actions requested. */
-"button.learn.more" = "Selengkapnya";
+"button.learn.more" = "Pelajari Lebih Lanjut";
 
 /* Title for generic More button. Mostly used to complete some modal flow. */
 "button.more" = "Lainnya";
@@ -50,7 +50,7 @@
 "button.not.now" = "Nanti";
 
 /* Title for generic OK button. Mostly used in popups and as such. */
-"button.ok" = "Baik";
+"button.ok" = "OKE";
 
 /* Title for generic Remove button. Mostly used to complete some modal flow. */
 "button.remove" = "Hapus";
@@ -65,16 +65,16 @@
 "button.share" = "Bagikan";
 
 /* Title for generic Stop button. Currently used to stop an audio recording) */
-"button.stop" = "Stop";
+"button.stop" = "Hentikan";
 
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Perbarui";
 
 /* Alert message when missing microphone access */
-"chat.mic.access.denied.message" = "Untuk mengaktifkan perekaman audio, silakan ketuk Pengaturan lalu nyalakan Mikrofon";
+"chat.mic.access.denied.message" = "Untuk mengaktifkan rekaman audio, silakan ketuk Pengaturan lalu nyalakan Mikrofon";
 
 /* Alert title when missing microphone access */
-"chat.mic.access.denied.title" = "Gagal mengakses mikrofon";
+"chat.mic.access.denied.title" = "Tidak dapat mengakses mikrofon";
 
 /* Title for generic delete button. */
 "Delete" = "Hapus";
@@ -116,10 +116,10 @@
 "label.search" = "Cari";
 
 /* Generic 'learn more' link. Mostly used to present additional information about topic. */
-"link.learnMore" = "Pelajari lebih banyak";
+"link.learnMore" = "Pelajari lebih lanjut";
 
 /* Link that when tapped will open App Store so user can update to the latest version of the app. */
-"link.update.your.app" = "Perbarui aplikasimu.";
+"link.update.your.app" = "Perbarui app Anda.";
 
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "Saya";
@@ -128,28 +128,28 @@
 "media.button.discard" = "Buang";
 
 /* Push notification for a new comment. Parameter is the text of the comment */
-"notification.commented.with.text" = "Berkomentar: %@";
+"notification.commented.with.text" = "Mengomentari: %@";
 
 /* Content for unknown contact notification. */
-"notification.contact.unknown.content" = "Salah satu kontak Anda kini ada di HalloApp";
+"notification.contact.unknown.content" = "Salah satu kontak Anda sekarang di HalloApp";
 
 /* Content for inviter notification. */
-"notification.invite.accepted.content" = "%@ baru menerima undangan Anda untuk bergabung di HalloApp 🎉";
+"notification.invite.accepted.content" = "%@ baru menerima undangan Anda untuk bergabung dengan HalloApp 🎉";
 
 /* New moment notification text to be shown to the user. */
 "notification.moment" = "Momen baru";
 
 /* New moment notification text to be shown to the user. */
-"notification.moment.1" = "%@ berbagi momen baru";
+"notification.moment.1" = "%@ membagikan momen baru";
 
 /* New moment notification text to be shown to the user. */
-"notification.moment.2" = "%1$@ dan %2$@ berbagi momen baru";
+"notification.moment.2" = "%1$@ dan %2$@ membagikan momen baru";
 
 /* New moment notification text to be shown to the user. */
-"notification.moment.3" = "%1$@, %2$@, dan %3$@ berbagi momen baru";
+"notification.moment.3" = "%1$@, %2$@, dan %3$@ membagikan momen baru";
 
 /* New moment notification text to be shown to the user. */
-"notification.moment.5" = "%1$@, %2$@, %3$@, dan lainnya berbagi momen baru";
+"notification.moment.5" = "%1$@, %2$@, %3$@, dan lainnya membagikan momen baru";
 
 /* New moment screenshot notification text to be shown to the user. */
 "notification.moment.screenshot" = "%@ mengambil jepretan layar momen Anda";
@@ -167,7 +167,7 @@
 "notification.new.contact.content" = "%@ sekarang di HalloApp";
 
 /* Content for friend notification. */
-"notification.new.friend.content" = "%@ kini ada di HalloApp";
+"notification.new.friend.content" = "%@ sekarang di HalloApp";
 
 /* Fallback text for new message notification. */
 "notification.new.message" = "Pesan Baru";
@@ -197,7 +197,7 @@
 "notification.voicepost" = "🎤 Postingan audio";
 
 /* String to auto-fill if a user tried to share to a friend. */
-"settings.share.text" = "Bergabunglah dengan jaringan relasi sungguhan saya di HalloApp. Unduh gratis di halloapp.com/dl";
+"settings.share.text" = "Bergabunglah dengan jaringan hubungan nyata saya di HalloApp. Unduh gratis di halloapp.com/dl";
 
 /* Button to edit favorites list */
 "title.edit.favorites" = "Edit daftar Favorit Anda";
